--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                         Conoce un poco mejor los lugares de los que proceden tus
                         colegas en línea
                     </h2>
-                    <h3 class="intro__quote">
+                    <p class="intro__quote">
                         Todo ser humano es un artista, un ser de la libertad,
                         llamado a participar en la transformación y reforma de
                         las condiciones, el pensamiento y las estructuras que
                         conforman e influyen en nuestras vidas.
-                    </h3>
-                    <h3 class="intro__quote-author">— Joseph Beuys</h3>
+                    </p>
+                    <p class="intro__quote-author">— Joseph Beuys</p>
                     <p class="intro__text">
                         La ciudad de Practicum ha reunido a profesionales de
                         diferentes rincones del mundo. Hoy, la Galería de Arte
