--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
                             >Compra esta obra de arte como NFT</a
                         >
                         <div class="place__artist">
-                            <span class="place__artist-title"
-                                >Artista<br
-                            /></span>
+                            <div class="place__artist-title">Artista</div>
                             <div>
                                 Natalia Dolgushina, productora de contenidos
                             </div>
@@ -204,9 +202,7 @@
                             >Compra esta obra de arte como NFT</a
                         >
                         <div class="place__artist">
-                            <span class="place__artist-title"
-                                >Artista<br
-                            /></span>
+                            <div class="place__artist-title">Artista</div>
                             <div>Steffan Warren, editor principal</div>
                             <div>Kseniya Glagoleva, directora del proyecto</div>
                         </div>
@@ -250,9 +246,7 @@
                             >Compra esta obra de arte como NFT</a
                         >
                         <div class="place__artist">
-                            <span class="place__artist-title"
-                                >Artista<br
-                            /></span>
+                            <div class="place__artist-title">Artista</div>
                             <div>Grevisse Kenguruka, editor técnico</div>
                         </div>
                         <div class="place__description">
@@ -302,9 +296,7 @@
                             >Compra esta obra de arte como NFT</a
                         >
                         <div class="place__artist">
-                            <span class="place__artist-title"
-                                >Artista<br
-                            /></span>
+                            <div class="place__artist-title">Artista</div>
                             <div>Bruno Larraín, estudiante Practicum</div>
                         </div>
                         <div class="place__description">
